--- a/Alchemy Tours/res/values/strings.xml
+++ b/Alchemy Tours/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="about">About</string>
     <string name="take_tour">Take a Tour</string>
     <string name="availability">Check Availability</string>
+    <string name="statues">Statues of Ireland</string>
     <string name="book_tour">Book a Tour</string>
     <string name="buy_full_version">Buy Full Version</string>
     <string name="scan">Scan</string>
